# web-chat

./: Cargo.toml  README.md
bruno/: bruno.json  health.bru  post_message.bru
src/: app.rs  chat.rs  main.rs  mcp.rs  ollama.rs  server.rs
