[package]
name = "egui_chat"
description = "A general chat widget for egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28"
egui = "0.28"
egui_inbox = "0.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "io-std"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
rfd = "0.14"
rmcp = "1.1"
async-trait = "0.1"

